// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Event Container should render Default 1`] = `
<DocumentFragment>
  .emotion-1 {
  display: grid;
  gap: 56px;
  gap: 32px;
}

@media (min-width:900px) {
  .emotion-1 {
    grid-template-columns: repeat(12, 1fr);
  }

  .emotion-1>* {
    grid-column: 4/10;
  }

  .emotion-1>:is(.emotion-4, .ea1goei0, .e11xbw3q3) {
    grid-column: 2/12;
  }

  .emotion-1>:is(
              .e1je8zv30,
                .e1xnbuxv0,
                .ebuvkaa1,
                .e5naayd1
            ) {
    grid-column: -1/1;
  }
}

.emotion-3 {
  margin: 0;
  display: grid;
  justify-items: center;
}

.emotion-3 .emotion-8 {
  aspect-ratio: 16/9;
  object-fit: cover;
}

.emotion-5 {
  display: grid;
  gap: 16px;
  grid-template-columns: auto;
}

.emotion-7 {
  max-width: 100%;
  height: auto;
  aspect-ratio: auto 0.6666666666666666;
  max-height: 80lvh;
  object-fit: contain;
  justify-self: center;
}

.emotion-9 {
  display: grid;
  grid-template-columns: auto auto;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 16px;
  margin-top: -32px;
}

@media (min-width:900px) {
  .emotion-9 {
    grid-column: 2/12;
  }
}

.emotion-11 {
  display: grid;
  grid-template-columns: auto auto auto;
  gap: 16px;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-13 {
  display: grid;
  grid-template-columns: auto auto;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-17 {
  display: grid;
  gap: 24px;
  grid-auto-rows: min-content;
}

.emotion-20 {
  margin: 0;
  font-family: Hanken Grotesk,Roboto,sans-serif;
  font-weight: 600;
  line-height: 1.15;
  font-size: 3rem;
}

.emotion-23 {
  margin: 0;
  line-height: 1.7;
  font-family: Merriweather,Roboto,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  margin-bottom: 0.35em;
}

.emotion-23.MuiTypography-gutterBottom {
  margin-bottom: 24px;
}

.emotion-23:last-child {
  margin-bottom: 0;
}

<article
    class="emotion-0 emotion-1 emotion-2"
  >
    <div
      data-testid="fake-head"
    >
      <title>
        Cool concert — Newsroom Name
      </title>
      <meta
        content="website"
        property="og:type"
      />
      <meta
        content="Cool concert"
        property="og:title"
      />
      <meta
        content="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
        property="og:description"
      />
      <meta
        content="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
        name="description"
      />
      <meta
        content="https://example.com"
        property="og:url"
      />
      <link
        href="https://example.com"
        rel="canonical"
      />
      <meta
        content="https://unsplash.it/200/100"
        property="og:image"
      />
      <meta
        content="200"
        property="og:image:width"
      />
      <meta
        content="https://unsplash.it/300/200"
        property="og:image"
      />
      <meta
        content="300"
        property="og:image:width"
      />
      <meta
        content="https://unsplash.it/500/300"
        property="og:image"
      />
      <meta
        content="500"
        property="og:image:width"
      />
      <meta
        content="https://unsplash.it/800/400"
        property="og:image"
      />
      <meta
        content="800"
        property="og:image:width"
      />
      <meta
        content="https://unsplash.it/1000/400"
        property="og:image"
      />
      <meta
        content="1000"
        property="og:image:width"
      />
      <meta
        content="https://unsplash.it/1200/400"
        property="og:image"
      />
      <meta
        content="1200"
        property="og:image:width"
      />
      <meta
        content="summary_large_image"
        name="twitter:card"
      />
      <meta
        content="max-image-preview:large"
        name="robots"
      />
    </div>
    <script
      data-testid="fake-script"
      type="application/ld+json"
    >
      {"@context":"http://schema.org","@type":"Event","startDate":"2023-02-24T09:00:00Z","endDate":"2023-02-25T07:30:00Z","duration":"P0Y0M0DT22H30M0S","keywords":"Concert","eventStatus":"Scheduled","location":"Basel","image":{"__typename":"Image","id":"ljh9FHAvHAs0AxC","createdAt":"2023-04-18T12:38:56.369Z","modifiedAt":"2023-04-18T12:38:56.371Z","filename":"DSC07717","extension":".JPG","width":4000,"height":6000,"fileSize":8667448,"description":null,"tags":[],"source":null,"link":null,"license":null,"focalPoint":{"x":0.5,"y":0.5},"title":null,"url":"https://unsplash.it/500/500","xl":"https://unsplash.it/1200/400","l":"https://unsplash.it/1000/400","m":"https://unsplash.it/800/400","s":"https://unsplash.it/500/300","xs":"https://unsplash.it/300/200","xxs":"https://unsplash.it/200/100","xlSquare":"https://unsplash.it/1200/1200","lSquare":"https://unsplash.it/1000/1000","mSquare":"https://unsplash.it/800/800","sSquare":"https://unsplash.it/500/500","xsSquare":"https://unsplash.it/300/300","xxsSquare":"https://unsplash.it/200/200","format":"jpg","mimeType":"image/jpg"},"name":"Cool concert","description":"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."}
    </script>
    <figure
      class="emotion-3 emotion-4"
    >
      <div
        class="emotion-5 emotion-6"
      >
        <img
          alt="DSC07717"
          class="emotion-7 emotion-8"
          loading="lazy"
          sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
          srcset="https://unsplash.it/1200/400 1200w,
https://unsplash.it/1000/400 1000w,
https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
          title=""
        />
      </div>
    </figure>
    <div
      class="emotion-9 emotion-10"
    >
      <div
        class="emotion-11 emotion-12"
      >
        <div
          class="emotion-13 emotion-14"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M9 11H7v2h2v-2zm4 0h-2v2h2v-2zm4 0h-2v2h2v-2zm2-7h-1V2h-2v2H8V2H6v2H5c-1.11 0-1.99.9-1.99 2L3 20a2 2 0 0 0 2 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 16H5V9h14v11z"
            />
          </svg>
          24.02.2023 09:00
        </div>
        <span>
          –
        </span>
         25.02.2023 07:30
      </div>
      <div
        class="emotion-11 emotion-12"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M15 11V5l-3-3-3 3v2H3v14h18V11h-6zm-8 8H5v-2h2v2zm0-4H5v-2h2v2zm0-4H5V9h2v2zm6 8h-2v-2h2v2zm0-4h-2v-2h2v2zm0-4h-2V9h2v2zm0-4h-2V5h2v2zm6 12h-2v-2h2v2zm0-4h-2v-2h2v2z"
          />
        </svg>
         Basel
      </div>
    </div>
    <div
      class="emotion-17 emotion-18"
    >
      <h1
        class="MuiTypography-root MuiTypography-h3 emotion-19 emotion-20"
      >
        Cool concert
      </h1>
    </div>
    <div
      class="emotion-21 emotion-22"
    >
      <div
        data-gramm="false"
        data-slate-editor="true"
        data-slate-node="value"
        style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-23"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Lorem ipsum dolor sit amet, 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <strong
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                consectetur adipiscing elit, 
              </span>
            </strong>
          </span>
          <span
            data-slate-node="text"
          >
            <em
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
              </span>
            </em>
          </span>
          <span
            data-slate-node="text"
          >
            <u
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Ut enim ad minim veniam, 
              </span>
            </u>
          </span>
          <span
            data-slate-node="text"
          >
            <del
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
              </span>
            </del>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </span>
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-23"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Lorem ipsum dolor sit amet, 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <strong
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                consectetur adipiscing elit, 
              </span>
            </strong>
          </span>
          <span
            data-slate-node="text"
          >
            <em
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
              </span>
            </em>
          </span>
          <span
            data-slate-node="text"
          >
            <u
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Ut enim ad minim veniam, 
              </span>
            </u>
          </span>
          <span
            data-slate-node="text"
          >
            <del
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
              </span>
            </del>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </span>
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-23"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Lorem ipsum dolor sit amet, 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <strong
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                consectetur adipiscing elit, 
              </span>
            </strong>
          </span>
          <span
            data-slate-node="text"
          >
            <em
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
              </span>
            </em>
          </span>
          <span
            data-slate-node="text"
          >
            <u
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Ut enim ad minim veniam, 
              </span>
            </u>
          </span>
          <span
            data-slate-node="text"
          >
            <del
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
              </span>
            </del>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </span>
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-23"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Lorem ipsum dolor sit amet, 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <strong
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                consectetur adipiscing elit, 
              </span>
            </strong>
          </span>
          <span
            data-slate-node="text"
          >
            <em
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
              </span>
            </em>
          </span>
          <span
            data-slate-node="text"
          >
            <u
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Ut enim ad minim veniam, 
              </span>
            </u>
          </span>
          <span
            data-slate-node="text"
          >
            <del
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
              </span>
            </del>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </span>
        </p>
      </div>
    </div>
  </article>
</DocumentFragment>
`;

exports[`Event Container should render WithClassName 1`] = `
<DocumentFragment>
  .emotion-1 {
  display: grid;
  gap: 56px;
  gap: 32px;
}

@media (min-width:900px) {
  .emotion-1 {
    grid-template-columns: repeat(12, 1fr);
  }

  .emotion-1>* {
    grid-column: 4/10;
  }

  .emotion-1>:is(.emotion-4, .ea1goei0, .e11xbw3q3) {
    grid-column: 2/12;
  }

  .emotion-1>:is(
              .e1je8zv30,
                .e1xnbuxv0,
                .ebuvkaa1,
                .e5naayd1
            ) {
    grid-column: -1/1;
  }
}

.emotion-3 {
  margin: 0;
  display: grid;
  justify-items: center;
}

.emotion-3 .emotion-8 {
  aspect-ratio: 16/9;
  object-fit: cover;
}

.emotion-5 {
  display: grid;
  gap: 16px;
  grid-template-columns: auto;
}

.emotion-7 {
  max-width: 100%;
  height: auto;
  aspect-ratio: auto 0.6666666666666666;
  max-height: 80lvh;
  object-fit: contain;
  justify-self: center;
}

.emotion-9 {
  display: grid;
  grid-template-columns: auto auto;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 16px;
  margin-top: -32px;
}

@media (min-width:900px) {
  .emotion-9 {
    grid-column: 2/12;
  }
}

.emotion-11 {
  display: grid;
  grid-template-columns: auto auto auto;
  gap: 16px;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-13 {
  display: grid;
  grid-template-columns: auto auto;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-17 {
  display: grid;
  gap: 24px;
  grid-auto-rows: min-content;
}

.emotion-20 {
  margin: 0;
  font-family: Hanken Grotesk,Roboto,sans-serif;
  font-weight: 600;
  line-height: 1.15;
  font-size: 3rem;
}

.emotion-23 {
  margin: 0;
  line-height: 1.7;
  font-family: Merriweather,Roboto,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  margin-bottom: 0.35em;
}

.emotion-23.MuiTypography-gutterBottom {
  margin-bottom: 24px;
}

.emotion-23:last-child {
  margin-bottom: 0;
}

<article
    class="extra-classname emotion-0 emotion-1 emotion-2"
  >
    <div
      data-testid="fake-head"
    >
      <title>
        Cool concert — Newsroom Name
      </title>
      <meta
        content="website"
        property="og:type"
      />
      <meta
        content="Cool concert"
        property="og:title"
      />
      <meta
        content="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
        property="og:description"
      />
      <meta
        content="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
        name="description"
      />
      <meta
        content="https://example.com"
        property="og:url"
      />
      <link
        href="https://example.com"
        rel="canonical"
      />
      <meta
        content="https://unsplash.it/200/100"
        property="og:image"
      />
      <meta
        content="200"
        property="og:image:width"
      />
      <meta
        content="https://unsplash.it/300/200"
        property="og:image"
      />
      <meta
        content="300"
        property="og:image:width"
      />
      <meta
        content="https://unsplash.it/500/300"
        property="og:image"
      />
      <meta
        content="500"
        property="og:image:width"
      />
      <meta
        content="https://unsplash.it/800/400"
        property="og:image"
      />
      <meta
        content="800"
        property="og:image:width"
      />
      <meta
        content="https://unsplash.it/1000/400"
        property="og:image"
      />
      <meta
        content="1000"
        property="og:image:width"
      />
      <meta
        content="https://unsplash.it/1200/400"
        property="og:image"
      />
      <meta
        content="1200"
        property="og:image:width"
      />
      <meta
        content="summary_large_image"
        name="twitter:card"
      />
      <meta
        content="max-image-preview:large"
        name="robots"
      />
    </div>
    <script
      data-testid="fake-script"
      type="application/ld+json"
    >
      {"@context":"http://schema.org","@type":"Event","startDate":"2023-02-24T09:00:00Z","endDate":"2023-02-25T07:30:00Z","duration":"P0Y0M0DT22H30M0S","keywords":"Concert","eventStatus":"Scheduled","location":"Basel","image":{"__typename":"Image","id":"ljh9FHAvHAs0AxC","createdAt":"2023-04-18T12:38:56.369Z","modifiedAt":"2023-04-18T12:38:56.371Z","filename":"DSC07717","extension":".JPG","width":4000,"height":6000,"fileSize":8667448,"description":null,"tags":[],"source":null,"link":null,"license":null,"focalPoint":{"x":0.5,"y":0.5},"title":null,"url":"https://unsplash.it/500/500","xl":"https://unsplash.it/1200/400","l":"https://unsplash.it/1000/400","m":"https://unsplash.it/800/400","s":"https://unsplash.it/500/300","xs":"https://unsplash.it/300/200","xxs":"https://unsplash.it/200/100","xlSquare":"https://unsplash.it/1200/1200","lSquare":"https://unsplash.it/1000/1000","mSquare":"https://unsplash.it/800/800","sSquare":"https://unsplash.it/500/500","xsSquare":"https://unsplash.it/300/300","xxsSquare":"https://unsplash.it/200/200","format":"jpg","mimeType":"image/jpg"},"name":"Cool concert","description":"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."}
    </script>
    <figure
      class="emotion-3 emotion-4"
    >
      <div
        class="emotion-5 emotion-6"
      >
        <img
          alt="DSC07717"
          class="emotion-7 emotion-8"
          loading="lazy"
          sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
          srcset="https://unsplash.it/1200/400 1200w,
https://unsplash.it/1000/400 1000w,
https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
          title=""
        />
      </div>
    </figure>
    <div
      class="emotion-9 emotion-10"
    >
      <div
        class="emotion-11 emotion-12"
      >
        <div
          class="emotion-13 emotion-14"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M9 11H7v2h2v-2zm4 0h-2v2h2v-2zm4 0h-2v2h2v-2zm2-7h-1V2h-2v2H8V2H6v2H5c-1.11 0-1.99.9-1.99 2L3 20a2 2 0 0 0 2 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 16H5V9h14v11z"
            />
          </svg>
          24.02.2023 09:00
        </div>
        <span>
          –
        </span>
         25.02.2023 07:30
      </div>
      <div
        class="emotion-11 emotion-12"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M15 11V5l-3-3-3 3v2H3v14h18V11h-6zm-8 8H5v-2h2v2zm0-4H5v-2h2v2zm0-4H5V9h2v2zm6 8h-2v-2h2v2zm0-4h-2v-2h2v2zm0-4h-2V9h2v2zm0-4h-2V5h2v2zm6 12h-2v-2h2v2zm0-4h-2v-2h2v2z"
          />
        </svg>
         Basel
      </div>
    </div>
    <div
      class="emotion-17 emotion-18"
    >
      <h1
        class="MuiTypography-root MuiTypography-h3 emotion-19 emotion-20"
      >
        Cool concert
      </h1>
    </div>
    <div
      class="emotion-21 emotion-22"
    >
      <div
        data-gramm="false"
        data-slate-editor="true"
        data-slate-node="value"
        style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-23"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Lorem ipsum dolor sit amet, 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <strong
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                consectetur adipiscing elit, 
              </span>
            </strong>
          </span>
          <span
            data-slate-node="text"
          >
            <em
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
              </span>
            </em>
          </span>
          <span
            data-slate-node="text"
          >
            <u
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Ut enim ad minim veniam, 
              </span>
            </u>
          </span>
          <span
            data-slate-node="text"
          >
            <del
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
              </span>
            </del>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </span>
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-23"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Lorem ipsum dolor sit amet, 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <strong
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                consectetur adipiscing elit, 
              </span>
            </strong>
          </span>
          <span
            data-slate-node="text"
          >
            <em
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
              </span>
            </em>
          </span>
          <span
            data-slate-node="text"
          >
            <u
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Ut enim ad minim veniam, 
              </span>
            </u>
          </span>
          <span
            data-slate-node="text"
          >
            <del
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
              </span>
            </del>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </span>
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-23"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Lorem ipsum dolor sit amet, 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <strong
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                consectetur adipiscing elit, 
              </span>
            </strong>
          </span>
          <span
            data-slate-node="text"
          >
            <em
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
              </span>
            </em>
          </span>
          <span
            data-slate-node="text"
          >
            <u
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Ut enim ad minim veniam, 
              </span>
            </u>
          </span>
          <span
            data-slate-node="text"
          >
            <del
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
              </span>
            </del>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </span>
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-23"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Lorem ipsum dolor sit amet, 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <strong
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                consectetur adipiscing elit, 
              </span>
            </strong>
          </span>
          <span
            data-slate-node="text"
          >
            <em
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
              </span>
            </em>
          </span>
          <span
            data-slate-node="text"
          >
            <u
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Ut enim ad minim veniam, 
              </span>
            </u>
          </span>
          <span
            data-slate-node="text"
          >
            <del
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
              </span>
            </del>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </span>
        </p>
      </div>
    </div>
  </article>
</DocumentFragment>
`;

exports[`Event Container should render WithEmotion 1`] = `
<DocumentFragment>
  .emotion-1 {
  display: grid;
  gap: 56px;
  gap: 32px;
}

@media (min-width:900px) {
  .emotion-1 {
    grid-template-columns: repeat(12, 1fr);
  }

  .emotion-1>* {
    grid-column: 4/10;
  }

  .emotion-1>:is(.emotion-4, .ea1goei0, .e11xbw3q3) {
    grid-column: 2/12;
  }

  .emotion-1>:is(
              .e1je8zv30,
                .e1xnbuxv0,
                .ebuvkaa1,
                .e5naayd1
            ) {
    grid-column: -1/1;
  }
}

.emotion-3 {
  margin: 0;
  display: grid;
  justify-items: center;
}

.emotion-3 .emotion-8 {
  aspect-ratio: 16/9;
  object-fit: cover;
}

.emotion-5 {
  display: grid;
  gap: 16px;
  grid-template-columns: auto;
}

.emotion-7 {
  max-width: 100%;
  height: auto;
  aspect-ratio: auto 0.6666666666666666;
  max-height: 80lvh;
  object-fit: contain;
  justify-self: center;
}

.emotion-9 {
  display: grid;
  grid-template-columns: auto auto;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 16px;
  margin-top: -32px;
}

@media (min-width:900px) {
  .emotion-9 {
    grid-column: 2/12;
  }
}

.emotion-11 {
  display: grid;
  grid-template-columns: auto auto auto;
  gap: 16px;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-13 {
  display: grid;
  grid-template-columns: auto auto;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-17 {
  display: grid;
  gap: 24px;
  grid-auto-rows: min-content;
}

.emotion-20 {
  margin: 0;
  font-family: Hanken Grotesk,Roboto,sans-serif;
  font-weight: 600;
  line-height: 1.15;
  font-size: 3rem;
}

.emotion-23 {
  margin: 0;
  line-height: 1.7;
  font-family: Merriweather,Roboto,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  margin-bottom: 0.35em;
}

.emotion-23.MuiTypography-gutterBottom {
  margin-bottom: 24px;
}

.emotion-23:last-child {
  margin-bottom: 0;
}

<article
    class="emotion-0 emotion-1 emotion-2"
  >
    <div
      data-testid="fake-head"
    >
      <title>
        Cool concert — Newsroom Name
      </title>
      <meta
        content="website"
        property="og:type"
      />
      <meta
        content="Cool concert"
        property="og:title"
      />
      <meta
        content="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
        property="og:description"
      />
      <meta
        content="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
        name="description"
      />
      <meta
        content="https://example.com"
        property="og:url"
      />
      <link
        href="https://example.com"
        rel="canonical"
      />
      <meta
        content="https://unsplash.it/200/100"
        property="og:image"
      />
      <meta
        content="200"
        property="og:image:width"
      />
      <meta
        content="https://unsplash.it/300/200"
        property="og:image"
      />
      <meta
        content="300"
        property="og:image:width"
      />
      <meta
        content="https://unsplash.it/500/300"
        property="og:image"
      />
      <meta
        content="500"
        property="og:image:width"
      />
      <meta
        content="https://unsplash.it/800/400"
        property="og:image"
      />
      <meta
        content="800"
        property="og:image:width"
      />
      <meta
        content="https://unsplash.it/1000/400"
        property="og:image"
      />
      <meta
        content="1000"
        property="og:image:width"
      />
      <meta
        content="https://unsplash.it/1200/400"
        property="og:image"
      />
      <meta
        content="1200"
        property="og:image:width"
      />
      <meta
        content="summary_large_image"
        name="twitter:card"
      />
      <meta
        content="max-image-preview:large"
        name="robots"
      />
    </div>
    <script
      data-testid="fake-script"
      type="application/ld+json"
    >
      {"@context":"http://schema.org","@type":"Event","startDate":"2023-02-24T09:00:00Z","endDate":"2023-02-25T07:30:00Z","duration":"P0Y0M0DT22H30M0S","keywords":"Concert","eventStatus":"Scheduled","location":"Basel","image":{"__typename":"Image","id":"ljh9FHAvHAs0AxC","createdAt":"2023-04-18T12:38:56.369Z","modifiedAt":"2023-04-18T12:38:56.371Z","filename":"DSC07717","extension":".JPG","width":4000,"height":6000,"fileSize":8667448,"description":null,"tags":[],"source":null,"link":null,"license":null,"focalPoint":{"x":0.5,"y":0.5},"title":null,"url":"https://unsplash.it/500/500","xl":"https://unsplash.it/1200/400","l":"https://unsplash.it/1000/400","m":"https://unsplash.it/800/400","s":"https://unsplash.it/500/300","xs":"https://unsplash.it/300/200","xxs":"https://unsplash.it/200/100","xlSquare":"https://unsplash.it/1200/1200","lSquare":"https://unsplash.it/1000/1000","mSquare":"https://unsplash.it/800/800","sSquare":"https://unsplash.it/500/500","xsSquare":"https://unsplash.it/300/300","xxsSquare":"https://unsplash.it/200/200","format":"jpg","mimeType":"image/jpg"},"name":"Cool concert","description":"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."}
    </script>
    <figure
      class="emotion-3 emotion-4"
    >
      <div
        class="emotion-5 emotion-6"
      >
        <img
          alt="DSC07717"
          class="emotion-7 emotion-8"
          loading="lazy"
          sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
          srcset="https://unsplash.it/1200/400 1200w,
https://unsplash.it/1000/400 1000w,
https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
          title=""
        />
      </div>
    </figure>
    <div
      class="emotion-9 emotion-10"
    >
      <div
        class="emotion-11 emotion-12"
      >
        <div
          class="emotion-13 emotion-14"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M9 11H7v2h2v-2zm4 0h-2v2h2v-2zm4 0h-2v2h2v-2zm2-7h-1V2h-2v2H8V2H6v2H5c-1.11 0-1.99.9-1.99 2L3 20a2 2 0 0 0 2 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 16H5V9h14v11z"
            />
          </svg>
          24.02.2023 09:00
        </div>
        <span>
          –
        </span>
         25.02.2023 07:30
      </div>
      <div
        class="emotion-11 emotion-12"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M15 11V5l-3-3-3 3v2H3v14h18V11h-6zm-8 8H5v-2h2v2zm0-4H5v-2h2v2zm0-4H5V9h2v2zm6 8h-2v-2h2v2zm0-4h-2v-2h2v2zm0-4h-2V9h2v2zm0-4h-2V5h2v2zm6 12h-2v-2h2v2zm0-4h-2v-2h2v2z"
          />
        </svg>
         Basel
      </div>
    </div>
    <div
      class="emotion-17 emotion-18"
    >
      <h1
        class="MuiTypography-root MuiTypography-h3 emotion-19 emotion-20"
      >
        Cool concert
      </h1>
    </div>
    <div
      class="emotion-21 emotion-22"
    >
      <div
        data-gramm="false"
        data-slate-editor="true"
        data-slate-node="value"
        style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-23"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Lorem ipsum dolor sit amet, 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <strong
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                consectetur adipiscing elit, 
              </span>
            </strong>
          </span>
          <span
            data-slate-node="text"
          >
            <em
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
              </span>
            </em>
          </span>
          <span
            data-slate-node="text"
          >
            <u
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Ut enim ad minim veniam, 
              </span>
            </u>
          </span>
          <span
            data-slate-node="text"
          >
            <del
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
              </span>
            </del>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </span>
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-23"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Lorem ipsum dolor sit amet, 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <strong
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                consectetur adipiscing elit, 
              </span>
            </strong>
          </span>
          <span
            data-slate-node="text"
          >
            <em
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
              </span>
            </em>
          </span>
          <span
            data-slate-node="text"
          >
            <u
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Ut enim ad minim veniam, 
              </span>
            </u>
          </span>
          <span
            data-slate-node="text"
          >
            <del
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
              </span>
            </del>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </span>
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-23"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Lorem ipsum dolor sit amet, 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <strong
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                consectetur adipiscing elit, 
              </span>
            </strong>
          </span>
          <span
            data-slate-node="text"
          >
            <em
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
              </span>
            </em>
          </span>
          <span
            data-slate-node="text"
          >
            <u
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Ut enim ad minim veniam, 
              </span>
            </u>
          </span>
          <span
            data-slate-node="text"
          >
            <del
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
              </span>
            </del>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </span>
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-23"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Lorem ipsum dolor sit amet, 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <strong
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                consectetur adipiscing elit, 
              </span>
            </strong>
          </span>
          <span
            data-slate-node="text"
          >
            <em
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
              </span>
            </em>
          </span>
          <span
            data-slate-node="text"
          >
            <u
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Ut enim ad minim veniam, 
              </span>
            </u>
          </span>
          <span
            data-slate-node="text"
          >
            <del
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
              </span>
            </del>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </span>
        </p>
      </div>
    </div>
  </article>
</DocumentFragment>
`;
